# KB-Man

./: kb_design.md  pyproject.toml
eval/: benchmark.py
kb/: __init__.py  cli.py  config.py  models.py  tools.py
kb/encoding/: dense.py  sparse.py
kb/ingest/: chunker.py  detector.py  fetcher.py  normalizer.py  summarizer.py  tagger.py
kb/injection/: injector.py
kb/retrieval/: convergence.py  iterator.py  reformulator.py  searcher.py
kb/store/: qdrant.py
