[project]
name = "kb"
version = "0.1.0"
description = "Personal knowledge base — store, search and retrieve documents locally"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.2",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.12.0",
]

[project.scripts]
kb = "kb.cli:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]
